# dogtail

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  logs.rs  main.rs  sink.rs  tailer.rs
