[package]
name = "dogtail"
version = "0.1.0"
edition = "2021"
authors = ["Oliver Browne"]
description = "Tail datadog logs to files, or stdout"
license = "MIT"
readme = "README.md"
repository = "https://github.com/oliverbrowneprima/dogtail"
homepage = "https://github.com/oliverbrowneprima/dogtail"
categories = ["command-line-utilities"]

[lib]
name = "dogtail"
path = "src/lib.rs"
test = true
doctest = true
doc = true
crate-type = ["lib"]

[[bin]]
name = "dogtail"
path = "src/bin/dogtail.rs"
test = true
doctest = true
doc = true

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.73"
chrono = "0.4.31"
clap = { version = "4.4.4", features = ["derive"] }
futures = "0.3.28"
rand = "0.8.5"
reqwest = { version = "0.11.20", features = ["json", "gzip"] }
serde_json = "1.0.106"
tokio = { version = "1.32.0", features = ["full"] }
tokio-stream = "0.1.14"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = {version = "0.3.17", features = ["env-filter"] }
tracing-tree = { version = "0.2.4", features = ["time"] }
